--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
+  <h1>{% block title %}Acceder{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
+    <label for="username">Nombre de Usuario</label>
     <input name="username" id="username" required>
-    <label for="password">Password</label>
+    <label for="password">Contraseña</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Log In">
   </form>
