--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
+  <h1>{% block title %}Registrarse{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
+    <label for="username">Nombre de Usuario</label>
     <input name="username" id="username" required>
-    <label for="password">Password</label>
+    <label for="password">Contraseña</label>
     <input type="password" name="password" id="password" required>
+    <label for="verify_password">Verificar Contraseña</label>
+    <input type="verify_password" name="verify_password" id="verify_password" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
