Método de acceso modificado: "username" removido, "email" agregado

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,6 +5,7 @@
   <h1>Flaskr</h1>
   <ul>
     {% if g.user %}
+      <li><span>{{ g.user['email'] }}</span>
       <li><span>{{ g.user['username'] }}</span>
       <li><a href="{{ url_for('auth.logout') }}">Cerrar Sesion</a>
     {% else %}
