--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -6,8 +6,8 @@
 
 {% block content %}
   <form method="post">
-    <label for="username">Nombre de Usuario</label>
-    <input name="username" id="username" required>
+    <label for="email">Correo electrónico</label>
+    <input type="email" name="email" id="email" required>
     <label for="password">Contraseña</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Log In">
