--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -6,12 +6,14 @@
 
 {% block content %}
   <form method="post">
+    <label for="email">Correo electrónico</label>
+    <input type="email" name="email" id="email" required>
     <label for="username">Nombre de Usuario</label>
     <input name="username" id="username" required>
     <label for="password">Contraseña</label>
     <input type="password" name="password" id="password" required>
     <label for="verify_password">Verificar Contraseña</label>
-    <input type="verify_password" name="verify_password" id="verify_password" required>
+    <input type="password" name="verify_password" id="verify_password" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
